[package]
name = "bounty-escrow"
version = "0.0.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
grainlify-interfaces = { path = "../../../interfaces" }
grainlify-common = { path = "../../../common" }

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }
